<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android Login and Registration</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registered? Log me in.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="title_activity_alendar">alendarActivity</string>
    <string name="select_the_session_date">Select the session date</string>
    <string name="sort_by_available_day">Sort by Available day</string>
    <string name="title_activity_display_message">Book a Session</string>
    <string name="book_a_session">Book a session</string>
    <string name="edit">Edit</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="Settings">Settings</string>
    <string name="Logout">Logout</string>
    <string name="Open" />
    <string name="Close" />

</resources>